--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.5",
     "@tanstack/react-query": "^5.51.11",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
