--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.51.11",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
