--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.5",
     "@tanstack/react-query": "^5.51.11",
-    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
@@ -25,8 +24,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.4.6",
     "zustand": "^4.5.4"
