--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
     "@mui/material": "^6.4.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.63.0",
     "@tanstack/react-query-devtools": "^5.63.0",
     "autoprefixer": "^10.4.19",
