Feat: WebGl로 빌드된 zip 파일만 업로드 되도록 수정

--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
-    "@mui/material": "^6.4.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^6.4.0",
     "@tanstack/react-query": "^5.63.0",
     "@tanstack/react-query-devtools": "^5.63.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "dompurify": "^3.2.3",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
