--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.4.0",
     "@tanstack/react-query": "^5.63.0",
     "@tanstack/react-query-devtools": "^5.63.0",
+    "@xeger/quill-image-actions": "^0.7.2",
+    "@xeger/quill-image-formats": "^0.7.2",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "dompurify": "^3.2.3",
