--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.39",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
